git commit -m "Avoid extra excaping during saving object to database"